--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,13 +1,16 @@
 .sections {
+  background-color: rgba(217, 217, 217, 1);
   & ul {
     display: flex;
     gap: 40px;
+    height: 30px;
+    align-items: center;
+    padding: 0 10px;
 
     & li {
       list-style: none;
+      cursor: pointer;
     }
-  }
-  & .registros-table {
   }
 }
 
@@ -30,7 +33,8 @@
 }
 
 .registros-table th {
-  background-color: #f5f5f5;
+  background: rgba(217, 70, 70, 1);
+  color: white;
 }
 
 .registros-table tbody tr:nth-child(even) {
@@ -39,4 +43,106 @@
 
 .registros-table tbody tr:hover {
   background-color: #e0e0e0;
+}
+
+.expedient-btn {
+  display: flex;
+  width: 25%;
+  gap: 20px;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  align-items: center;
+}
+
+.expedient-btn:hover {
+  background-color: #0056b3;
+}
+
+/* TABS */
+
+.tab-header {
+  display: flex;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.tab {
+  flex: 1;
+  text-align: center;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.tab.active {
+  background-color: rgba(212, 25, 25, 1);
+  /* Color de fondo activo */
+  color: #fff; /* Color del texto activo */
+}
+
+/* .tab:hover {
+  background-color: #ccc;
+} */
+
+/* Estilos del contenido de los tabs */
+.tab-content {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+/* Estilos para el botón y la tabla */
+/* Estilos para los botones en las tablas */
+.button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 10px;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+/* Otros estilos para los botones según su función */
+.primary-button {
+  background-color: #007bff;
+}
+
+.secondary-button {
+  background-color: #6c757d;
+}
+
+.success-button {
+  background-color: #28a745;
+}
+
+.danger-button {
+  background-color: #dc3545;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table,
+th,
+td {
+  border: 1px solid #ccc;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
 }
