--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -2,117 +2,78 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Average+Sans&family=Public+Sans:wght@700&display=swap");
 
-body {
+
+.container-login {
+  width: 100vw;
+  height: 100vh;
   background: linear-gradient(
     270deg,
     #eb5757 0%,
     rgba(235, 87, 87, 0.17) 71.87%
   );
-}
-.container {
-  width: 1291px;
-  height: 651px;
-  top: 59px;
-  left: 47px;
-  position: absolute;
-}
-.container-login {
-  margin: auto;
-  width: 361px;
-  /* top: 84px; */
-  left: 104px;
-  position: absolute;
-  height: 102px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
 
-#login {
-  margin-top: 50px;
-  width: 361px;
-  height: 102px;
-  top: 384px;
-  left: 104px;
-  position: absolute;
+.container-form {
 }
 
-#title-login {
-  width: 681px;
-  height: 62px;
-  top: 103px;
-  left: 47px;
+.container-logo {
+  display: grid;
+  place-items: center;
+}
+
+.container-input {
+  display: flex;
+  flex-direction: column;
+}
+
+#form-login {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#title-sistema {
   font-family: "Average Sans", sans-serif;
   font-size: 48px;
   font-weight: 400;
   line-height: 62px;
   letter-spacing: 0em;
   text-align: center;
-  position: absolute;
+  position: relative;
   color: rgba(0, 0, 0, 0.35);
+  bottom: 100px;
 }
 
 #title-welcome {
-  width: 442px;
-  height: 77px;
-  top: 231px;
-  left: 104px;
   font-family: "Average Sans", sans-serif;
   font-size: 72px;
   font-weight: 400;
   line-height: 93px;
   letter-spacing: 0em;
   text-align: left;
-  position: absolute;
+
   color: rgba(113, 118, 122, 1);
 }
 
-img {
-  width: 564px;
-  height: 548px;
-  top: 59px;
-  left: 974px;
-  position: absolute;
+#escudo {
 }
 
 #mmq {
-  width: 473px;
-  height: 11px;
-  top: 579px;
-  left: 1090px;
-
-  /* font-family: "Public Sans", sans-serif;
-  font-size: 60px;
-  font-weight: 800;
-  line-height: 71px;
-  letter-spacing: 0em;
-  text-align: left; */
   color: rgba(255, 255, 255, 1);
-  /* 
-  font-family: "Public Sans", sans-serif;
-  font-size: 45px;
-  font-weight: 800;
-  line-height: 53px;
-  letter-spacing: 0em;
-  text-align: left; */
-
-  /* font-family: "Public Sans", sans-serif;
-  font-size: 48px;
-  font-weight: 800;
-  line-height: 56px;
-  letter-spacing: 0em;
-  text-align: left; */
-
   font-family: "Public Sans", sans-serif;
   font-size: 48px;
   font-weight: 600;
   line-height: 56px;
   letter-spacing: 0em;
   text-align: left;
-  position: absolute;
 }
 
 /* Estilos para etiquetas y campos de entrada */
 label {
-  width: 359.87px;
-  height: 28px;
   font-family: "Public Sans", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -122,13 +83,12 @@ label {
   color: rgba(23, 23, 23, 0.55);
 }
 
-input {
-  margin-bottom: 30px;
-  width: 361px;
+.input-login {
   height: 40px;
-  top: 28px;
+  width: 400px;
   border-radius: 3px;
-  border: 1px solid rgba(89, 89, 201, 1);
+  border: 0.2px solid rgb(153, 150, 150);
+  outline: none;
   font-family: "Average Sans", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -138,24 +98,19 @@ input {
 
 /* Estilos para el botón */
 #btn-login {
-  width: 175px;
-  height: 50px;
-  top: 200px;
-  /* left: 290px; */
-  padding: 12px, 20px, 12px, 20px;
-  border-radius: 4px;
-  gap: 10px;
+  height: 40px;
+  width: 400px;
   background: rgba(235, 87, 87, 1);
+  color: white;
+  border: none;
+  border-radius: 3px;
+  font-size: 22px;
   font-family: "Public Sans", sans-serif;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 0em;
-  text-align: center;
-  position: absolute;
-  color: rgba(255, 255, 255, 1);
 }
 
+/* #btn-login:hover {
+  background: rgba(235, 87, 87, 1);
+} */
 /* #btn-login:hover {
   background: rgba(235, 87, 87, 1);
 } */
