--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -5,13 +5,32 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 75px;
-  background-color: brown;
+  background-color: rgba(212, 25, 25, 0.79);
   padding: 0 20px;
   color: white;
+  font-family: "Public Sans", sans-serif;
+
+  & .container-logo {
+    display: flex;
+    align-items: center;
+  }
   & .logo {
     display: flex;
     align-items: center;
     gap: 10px;
+  }
+  & .title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & span:first-child {
+      font-size: 14px;
+    }
+
+    & span:last-child {
+      font-size: 18px;
+    }
   }
   & .icon-login {
     display: flex;
