--- a/src/styles/new_document.css
+++ b/src/styles/new_document.css
@@ -1,5 +1,5 @@
 /* styles.css */
-.expedient-container {
+.document-container {
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
@@ -9,21 +9,21 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.expedient-form {
+.document-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
 
-.expedient-input,
-.expedient-textarea {
+.document-input,
+.document-textarea {
   width: 100%;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-.expedient-label {
+.document-label {
   font-family: "Public Sans", sans-serif;
   font-weight: 300;
   line-height: 28.2px;
