--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,45 +1,161 @@
 /* Estilos para el formulario */
+
+@import url("https://fonts.googleapis.com/css2?family=Average+Sans&family=Public+Sans:wght@700&display=swap");
+
+body {
+  background: linear-gradient(
+    270deg,
+    #eb5757 0%,
+    rgba(235, 87, 87, 0.17) 71.87%
+  );
+}
+.container {
+  width: 1291px;
+  height: 651px;
+  top: 59px;
+  left: 47px;
+  position: absolute;
+}
 .container-login {
   margin: auto;
+  width: 361px;
+  /* top: 84px; */
+  left: 104px;
+  position: absolute;
+  height: 102px;
 }
 
 #login {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
+  margin-top: 50px;
+  width: 361px;
+  height: 102px;
+  top: 384px;
+  left: 104px;
+  position: absolute;
+}
+
+#title-login {
+  width: 681px;
+  height: 62px;
+  top: 103px;
+  left: 47px;
+  font-family: "Average Sans", sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 62px;
+  letter-spacing: 0em;
+  text-align: center;
+  position: absolute;
+  color: rgba(0, 0, 0, 0.35);
+}
+
+#title-welcome {
+  width: 442px;
+  height: 77px;
+  top: 231px;
+  left: 104px;
+  font-family: "Average Sans", sans-serif;
+  font-size: 72px;
+  font-weight: 400;
+  line-height: 93px;
+  letter-spacing: 0em;
+  text-align: left;
+  position: absolute;
+  color: rgba(113, 118, 122, 1);
+}
+
+img {
+  width: 564px;
+  height: 548px;
+  top: 59px;
+  left: 974px;
+  position: absolute;
+}
+
+#mmq {
+  width: 473px;
+  height: 11px;
+  top: 579px;
+  left: 1090px;
+
+  /* font-family: "Public Sans", sans-serif;
+  font-size: 60px;
+  font-weight: 800;
+  line-height: 71px;
+  letter-spacing: 0em;
+  text-align: left; */
+  color: rgba(255, 255, 255, 1);
+  /* 
+  font-family: "Public Sans", sans-serif;
+  font-size: 45px;
+  font-weight: 800;
+  line-height: 53px;
+  letter-spacing: 0em;
+  text-align: left; */
+
+  /* font-family: "Public Sans", sans-serif;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 56px;
+  letter-spacing: 0em;
+  text-align: left; */
+
+  font-family: "Public Sans", sans-serif;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 56px;
+  letter-spacing: 0em;
+  text-align: left;
+  position: absolute;
 }
 
 /* Estilos para etiquetas y campos de entrada */
 label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
+  width: 359.87px;
+  height: 28px;
+  font-family: "Public Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(23, 23, 23, 0.55);
 }
 
 input {
-  width: 95%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  margin-bottom: 30px;
+  width: 361px;
+  height: 40px;
+  top: 28px;
+  border-radius: 3px;
+  border: 1px solid rgba(89, 89, 201, 1);
+  font-family: "Average Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 31px;
+  letter-spacing: 0em;
 }
 
 /* Estilos para el botón */
-button {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
+#btn-login {
+  width: 175px;
+  height: 50px;
+  top: 200px;
+  /* left: 290px; */
+  padding: 12px, 20px, 12px, 20px;
+  border-radius: 4px;
+  gap: 10px;
+  background: rgba(235, 87, 87, 1);
+  font-family: "Public Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: center;
+  position: absolute;
+  color: rgba(255, 255, 255, 1);
 }
 
-button:hover {
-  background-color: #0056b3;
-}
+/* #btn-login:hover {
+  background: rgba(235, 87, 87, 1);
+} */
