--- a/src/styles/expedient.css
+++ b/src/styles/expedient.css
@@ -1,15 +1,115 @@
 .sections {
   background-color: rgba(217, 217, 217, 1);
-  & ul {
-    display: flex;
-    gap: 40px;
-    height: 30px;
-    align-items: center;
-    padding: 0 10px;
+}
+.expediente-name {
+  width: 300px;
+  height: 44px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #ffffff;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* margin: 0; */
+  padding: 0 20px;
+  background: rgba(212, 25, 25, 1);
+}
 
-    & li {
-      list-style: none;
-      cursor: pointer;
-    }
+.expediente-info {
+  background-color: #f5f5f5; /* Fondo de la sección de información */
+  padding: 5px;
+  border: 1px solid #ccc;
+  /* border-radius: 5px; */
+}
+
+.expediente-table th {
+  text-align: left;
+}
+.expediente-table th {
+  padding: 10px;
+  background-color: rgb(255, 255, 255);
+  color: #000000;
+}
+
+.expediente-table td {
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.expediente-table td:last-child {
+  border-bottom: none;
+}
+
+.expediente-description {
+  font-size: 16px;
+  color: #333;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.documentos {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border: 1px solid #ccc;
+  /* border-radius: 5px; */
+}
+
+.documentos h2 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #000000;
+  margin: 0;
+  margin-bottom: 20px; /* Espacio entre el título y las tarjetas */
+}
+
+.documentos-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.documento-card {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+
+  & h3 {
+    font-size: 18px;
+    margin: 0;
+  }
+
+  & p {
+    margin: 5px 0;
+  }
+
+  & a {
+    display: block;
+    color: #007bff;
+    text-decoration: none;
+    margin-top: 10px;
   }
 }
+
+.documento-card:hover {
+  transform: scale(1.05);
+}
+
+/* .documento-card h3 {
+  font-size: 18px;
+  margin: 0;
+} */
+
+/* .documento-card p {
+  margin: 5px 0;
+}
+
+.documento-card a {
+  display: block;
+  color: #007bff;
+  text-decoration: none;
+  margin-top: 10px;
+} */
