--- a/src/styles/new_expedient.css
+++ b/src/styles/new_expedient.css
@@ -9,7 +9,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.expedient-form {
+#expedient-form {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
@@ -21,6 +21,7 @@
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  background-color: rgba(217, 217, 217, 1);
 }
 
 .expedient-label {
