--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -20,7 +20,27 @@
     /* padding: 10px; */
   }
 
-  & input{
+  & input {
     border-radius: 3px;
   }
+}
+
+.filters {
+  display: flex;
+  /* justify-content: space-between; */
+  justify-content: center;
+  /* margin-bottom: 20px; */
+  background-color: rgba(235, 87, 87, 1);
+  margin-left: 20px;
+  gap: 5px;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+.filters label {
+  margin-right: 10px;
+}
+
+select {
+  border-radius: 3px;
 }
