--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,27 +1,14 @@
-.registros-table {
-  width: 100%;
-  border-collapse: collapse;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-}
+#table-data {
+  box-shadow: 0 10px 4px rgba(0, 0, 0, 0.1);
 
-.registros-table th,
-.registros-table td {
-  padding: 10px;
-  text-align: left;
-  /* border: 1px solid #ccc; */
-}
-
-.registros-table th {
-  background: rgba(217, 70, 70, 1);
-  color: white;
-}
-
-.registros-table tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-.registros-table tbody tr:hover {
-  background-color: #e0e0e0;
+  & td {
+    padding: 10px;
+    text-align: left;
+    /* border: 1px solid #ccc; */
+  }
+  & th {
+    padding: 10px;
+    background: rgba(217, 70, 70, 1);
+    color: white;
+  }
 }
