cambios en los compenentes

--- a/src/styles/expedientsTab.css
+++ b/src/styles/expedientsTab.css
@@ -1,7 +1,9 @@
-.tab-header {
+.tabExpedients-header {
   display: flex;
   margin-bottom: 5px;
   margin-top: 5px;
+  width: 25%;
+  gap: 10px;
 }
 
 .tab {
