--- a/src/styles/new_expedient.css
+++ b/src/styles/new_expedient.css
@@ -30,3 +30,17 @@
   line-height: 28.2px;
   font-size: 24px;
 }
+
+.newExpedient {
+  text-align: center;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.newExpedient:hover {
+  background-color: rgba(212, 25, 25, 1);
+  color: #fff;
+}
