--- a/src/styles/expedient.css
+++ b/src/styles/expedient.css
@@ -1,70 +1,41 @@
-.expedient-section {
-  /* width: 100vw;
-  height: 100vh; */
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(217, 217, 217, 1);
-  /* padding: 10px; */
-}
-
-.container-expedient {
-  width: 70vw;
-  max-width: 90vh;
-  height: calc(70vw * 1.41);
-  max-height: 85vh;
-  border-color: #000000;
-  border-width: 2px;
-  border-style: groove;
-  background-color: white;
-  margin: 10px;
-}
-
-.expedient-info {
-  padding: 20px;
-  display: flex;
-  align-items: center;
-}
-
 .expedient-title {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   color: #000000;
-  text-align: center;
+  /* text-align: center; */
   font-family: "Average Sans", sans-serif;
-  padding: 30px;
+  padding: 10px;
 }
-.expedient-name {
+
+#expedient-name {
   font-size: 35px;
   font-weight: bold;
-  color: #000000;
-  text-align: center;
-  padding: 0 20px;
+  color: #ffffff;
+  text-align: left;
   font-family: "Average Sans", sans-serif;
-  margin-top: 50px;
+  background-color: rgba(212, 25, 25, 0.79);
+  display: flex;
 }
 
-.expedient-description {
-  justify-content: left;
-  flex-direction: column;
-  padding: 40px;
+#expedient-description {
+  background-color: rgb(255, 255, 255);
+  margin-top: 20px;
 }
 
 .button-back {
-  font-size: 25px;
+  font-size: 35px;
+  margin: 10px;
 }
 
 .button-back:hover {
   cursor: pointer;
-  color: rgba(235, 87, 87, 1);
+  color: rgb(0, 0, 0);
 }
 
 ul,
 p {
-  font-family: "Public Sans", sans-serif;
-  font-size: 17px;
+  font-family: "Average Sans", sans-serif;
+  font-size: 20px;
   color: #333;
   margin-top: 10px;
   padding: 10px;
@@ -75,13 +46,4 @@ p {
 }
 ul {
   list-style: none;
-}
-
-.logo {
-  width: 150px;
-  height: 150px;
-}
-
-.icons {
-  flex-direction: row;
 }
