--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -13,22 +13,31 @@ header {
     height: auto;
     padding: 10px 20px;
     text-align: center;
-    & h3 {
-      font-size: 10px;
+  }
+
+  .container-logo-nav {
+    display: flex;
+    align-items: center;
+  }
+
+  .mmq-icon:hover {
+    cursor: pointer;
+  }
+
+  .sistema {
+    font-size: 35px;
+    text-shadow: 0 10px 6px rgba(0, 0, 1, 0.609);
+
+    @media (max-width: 1100px) {
+      font-size: 25px;
     }
-  }
 
-  .container-logo {
-    display: flex;
-    align-items: center;
-  }
+    @media (max-width: 900px) {
+      font-size: 20px;
+    }
 
-  & .logo {
-    display: flex;
-    align-items: center;
-
-    & img {
-      width: 100px;
+    @media (max-width: 850px) {
+      font-size: 15px;
     }
   }
 
@@ -37,10 +46,10 @@ header {
     flex-direction: column;
     align-items: center;
     font-size: 14px;
+  }
 
-    span:last-child {
-      font-size: 18px;
-    }
+  #user-name {
+    text-shadow: 0 8px 3px rgba(0, 0, 1, 0.609);
   }
 
   .icon-login {
