--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,6 @@
 * {
   padding: 0;
 }
-body {
-  background-color: rgba(224, 224, 224, 0.58);
-}
+/* body {
+  background-color: rgba(217, 217, 217, 1);
+} */
