--- a/src/styles/tab.css
+++ b/src/styles/tab.css
@@ -2,6 +2,8 @@
   display: flex;
   margin-bottom: 5px;
   margin-top: 5px;
+  gap: 10px;
+  padding: 10px;
 }
 
 .tab.disable {
@@ -10,19 +12,18 @@
   padding: 10px 20px;
   cursor: pointer;
   background-color: #f0f0f0;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: 5px;
 }
 
 .tab.active {
   background-color: rgba(212, 25, 25, 1);
-
   color: #fff;
   flex: 1;
   text-align: center;
   padding: 10px 20px;
   cursor: pointer;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: 5px;
   cursor: inherit;
 }
