--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 0;
+  /* margin: 5px 0; */
 }
 
 .page-item {
   cursor: pointer;
   margin: 0 20px;
-  padding: 8px 16px;
+  padding: 5px 16px;
   border: 1px solid #ccc;
   background-color: #fff;
   color: #333;
