enrutamiento y arreglos de bugs

--- a/src/styles/tab.css
+++ b/src/styles/tab.css
@@ -32,6 +32,10 @@
   background-color: rgba(212, 25, 25, 1);
   color: #fff;
 }
+.tab.tab.active:hover {
+  background-color: rgba(212, 25, 25, 1);
+  color: #fff;
+}
 
 /* Estilos del contenido de los tabs */
 .tab-content {
