--- a/src/styles/expedientsTab.css
+++ b/src/styles/expedientsTab.css
@@ -2,8 +2,13 @@
   display: flex;
   margin-bottom: 5px;
   margin-top: 5px;
+  padding: 10px;
   width: 50%;
   gap: 10px;
+}
+
+a {
+  text-decoration: none;
 }
 
 .tab.active {
@@ -13,6 +18,7 @@
   color: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
+  text-decoration: none;
 }
 
 .tab.disable {
@@ -22,6 +28,8 @@
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   border-radius: 5px;
+  text-decoration: none;
+  color: #000000;
 }
 
 .tab:hover {
