--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,8 @@
-html {
+body {
   background-color: rgba(255, 255, 255, 0.5);
+  /* background-image: url("../assets/MMQ.svg");
+  background-repeat: no-repeat;
+  background-size: 600px;
+  background-position: center;
+  background-attachment: fixed; */
 }
