--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,5 +1,4 @@
 /* Estilos para el formulario */
-
 @import url("https://fonts.googleapis.com/css2?family=Average+Sans&family=Public+Sans:wght@700&display=swap");
 
 .container-login {
@@ -15,6 +14,19 @@
   justify-content: center;
   gap: 20px;
 }
+
+/*Media query para dispositivos con un ancho máximo de 900*/
+@media screen and (max-width: 900px) {
+  .container-login {
+    display: inline-block;
+  }
+
+  .container-logo {
+    display: inline-block;
+  }
+}
+
+
 
 /* .container-form {
   width: 100%;
