--- a/src/styles/makePass.css
+++ b/src/styles/makePass.css
@@ -2,3 +2,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
+.form-check-input {
+  border-color: rgb(0, 0, 0) !important;
+  border: 1px solid !important;
+}
+
+.form-check-input:checked {
+  background-color: rgba(212, 25, 25, 1) !important;
+  border-color: rgba(212, 25, 25, 1);
+}
